fix product slider not showing item details

--- a/styles/product-slider.scss
+++ b/styles/product-slider.scss
@@ -30,17 +30,21 @@
       color: var(--yc-primary-color);
       line-height: 24px;
 
-      @media (max-width: 767px) {
-        font-size: 20px;
+      @media (max-width: 768px) {
+        font-size: 14px;
       }
     }
+    
 
-    .compare-price {
-      color: #8D8D8D;
-      font-size: 16px;
-      margin-top: 5px;
-      font-weight: 400;
-      text-decoration-line: line-through;
+    .compare-at-price {
+      text-decoration: line-through;
+      font-size: 18px;
+      font-weight: 300;
+      color: #9B9B9B;
+      
+      @media (max-width: 768px) {
+        font-size: 12px;
+      }
     }
   }
 
@@ -81,7 +85,6 @@
     .compare-at-price {
       font-weight: 400;
       color: #8D8D8D;
-      font-size: 18px;
       line-height: 120%;
       text-decoration-line: line-through;
     }
